[gd_scene load_steps=6 format=3 uid="uid://dmqihira2abkg"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_2qkdf"]
[ext_resource type="Theme" uid="uid://bcym26vxhg41f" path="res://UI/main_menu.tres" id="1_e8t4f"]
[ext_resource type="PackedScene" uid="uid://cuqp5236hm4c2" path="res://UI/settings_menu.tscn" id="3_l2xha"]
[ext_resource type="PackedScene" uid="uid://dogkwlr7gdyv6" path="res://UI/store_menu.tscn" id="3_x2x3x"]
[ext_resource type="PackedScene" uid="uid://4nptlc4a00nr" path="res://UI/build_menu.tscn" id="4_tmt4e"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e8t4f")
script = ExtResource("1_2qkdf")

[node name="GameMenu" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
offset_right = 432.0
offset_bottom = 301.0
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 140

[node name="VBoxContainer" type="VBoxContainer" parent="GameMenu"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 22

[node name="StoreButton" type="Button" parent="GameMenu/VBoxContainer"]
layout_mode = 2
text = "Store"

[node name="BuildButton" type="Button" parent="GameMenu/VBoxContainer"]
layout_mode = 2
text = "Build"

[node name="MissionsButton" type="Button" parent="GameMenu/VBoxContainer"]
layout_mode = 2
text = "Missions"

[node name="StartMenu" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 200
theme_override_constants/margin_bottom = 140

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 22

[node name="StartButton" type="Button" parent="StartMenu/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="SettingsButton" type="Button" parent="StartMenu/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="StartMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="PlayerProfile" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -296.0
offset_top = -139.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerProfile"]
layout_mode = 2

[node name="Label" type="Label" parent="PlayerProfile/HBoxContainer"]
layout_mode = 2
text = "$"

[node name="Label2" type="Label" parent="PlayerProfile/HBoxContainer"]
layout_mode = 2
text = "10000"

[node name="StoreMenu" parent="." instance=ExtResource("3_x2x3x")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="BuildMenu" parent="." instance=ExtResource("4_tmt4e")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="SettingsMenu" parent="." instance=ExtResource("3_l2xha")]
visible = false
layout_mode = 1

[connection signal="pressed" from="GameMenu/VBoxContainer/StoreButton" to="." method="_on_store_button_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/BuildButton" to="." method="_on_build_button_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/MissionsButton" to="." method="_on_missions_button_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
